enhancement(#183): finished MagicLink repository methods